--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>testapp</module>
         <module>auth</module>
         <module>common</module>
+        <module>admin</module>
     </modules>
 
     <distributionManagement>
