--- a/hooks/pom.xml
+++ b/hooks/pom.xml
@@ -10,9 +10,8 @@
     </parent>
 
     <groupId>com.bensiebert.codelib</groupId>
-    <artifactId>auth</artifactId>
+    <artifactId>hooks</artifactId>
     <version>1.0.2-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
@@ -48,23 +47,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.bensiebert.codelib</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.bensiebert.codelib</groupId>
-            <artifactId>hooks</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
         </dependency>
     </dependencies>
 
@@ -87,5 +72,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
