--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>common</module>
         <module>admin</module>
         <module>settings</module>
+        <module>hooks</module>
     </modules>
 
     <distributionManagement>
