--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bensiebert</groupId>
     <artifactId>codelib</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -23,6 +23,7 @@
         <module>admin</module>
         <module>settings</module>
         <module>hooks</module>
+        <module>ratelimiting</module>
     </modules>
 
     <distributionManagement>
