--- a/ratelimiting/pom.xml
+++ b/ratelimiting/pom.xml
@@ -10,9 +10,8 @@
     </parent>
 
     <groupId>com.bensiebert.codelib</groupId>
-    <artifactId>common</artifactId>
+    <artifactId>ratelimiting</artifactId>
     <version>1.0.3-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
@@ -39,6 +38,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
