--- a/testapp/pom.xml
+++ b/testapp/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>ratelimiting</artifactId>
             <version>1.0.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.bensiebert.codelib</groupId>
+            <artifactId>cache</artifactId>
+            <version>1.0.4-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
