--- a/ratelimiting/pom.xml
+++ b/ratelimiting/pom.xml
@@ -51,6 +51,11 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.bensiebert.codelib</groupId>
+            <artifactId>hooks</artifactId>
+            <version>1.0.5-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
