--- a/testapp/pom.xml
+++ b/testapp/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>faq</artifactId>
             <version>1.0.7-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.bensiebert.codelib</groupId>
+            <artifactId>onbaording</artifactId>
+            <version>1.0.7-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
