--- a/todo/pom.xml
+++ b/todo/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>com.bensiebert.codelib</groupId>
-    <artifactId>settings</artifactId>
+    <artifactId>todo</artifactId>
     <version>1.0.14-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -68,6 +68,11 @@
             <artifactId>hooks</artifactId>
             <version>1.0.14-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.bensiebert.codelib</groupId>
+            <artifactId>crud</artifactId>
+            <version>1.0.14-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -89,5 +94,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
