--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.bensiebert</groupId>
         <artifactId>codelib</artifactId>
-        <version>1.0.14-SNAPSHOT</version>
+        <version>1.0.17-SNAPSHOT</version>
     </parent>
 
     <groupId>com.bensiebert.codelib</groupId>
     <artifactId>admin</artifactId>
-    <version>1.0.14-SNAPSHOT</version>
+    <version>1.0.17-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -48,6 +48,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.11</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
@@ -56,12 +62,12 @@
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>auth</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>hooks</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
