--- a/testapp/pom.xml
+++ b/testapp/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.bensiebert</groupId>
         <artifactId>codelib</artifactId>
-        <version>1.0.14-SNAPSHOT</version>
+        <version>1.0.17-SNAPSHOT</version>
     </parent>
 
     <groupId>com.bensiebert.codelib</groupId>
     <artifactId>testapp</artifactId>
-    <version>1.0.14-SNAPSHOT</version>
+    <version>1.0.17-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
@@ -38,6 +38,11 @@
             <version>3.5.5</version>
         </dependency>
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.11</version>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.7</version>
@@ -51,47 +56,47 @@
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>auth</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>common</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>admin</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>settings</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>hooks</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>ratelimiting</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>cache</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>crud</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>faq</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
