--- a/testapp/pom.xml
+++ b/testapp/pom.xml
@@ -103,6 +103,11 @@
             <artifactId>onbaording</artifactId>
             <version>1.0.8-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.bensiebert.codelib</groupId>
+            <artifactId>avatars</artifactId>
+            <version>1.0.17-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
