--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>todo</module>
         <module>avatars</module>
         <module>userdiscovery</module>
+        <module>chats</module>
     </modules>
 
     <distributionManagement>
