--- a/crud/pom.xml
+++ b/crud/pom.xml
@@ -59,6 +59,11 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.bensiebert.codelib</groupId>
+            <artifactId>auth</artifactId>
+            <version>1.0.24-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
