added file service

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>avatars</module>
         <module>userdiscovery</module>
         <module>chats</module>
+        <module>files</module>
     </modules>
 
     <distributionManagement>
