--- a/chats/pom.xml
+++ b/chats/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.bensiebert</groupId>
         <artifactId>codelib</artifactId>
-        <version>1.0.34-SNAPSHOT</version>
+        <version>1.0.37-SNAPSHOOT</version>
     </parent>
 
     <groupId>com.bensiebert.codelib</groupId>
     <artifactId>chats</artifactId>
-    <version>1.0.34-SNAPSHOT</version>
+    <version>1.0.37-SNAPSHOOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -62,12 +62,12 @@
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>auth</artifactId>
-            <version>1.0.34-SNAPSHOT</version>
+            <version>1.0.37-SNAPSHOOT</version>
         </dependency>
         <dependency>
             <groupId>com.bensiebert.codelib</groupId>
             <artifactId>ratelimiting</artifactId>
-            <version>1.0.34-SNAPSHOT</version>
+            <version>1.0.37-SNAPSHOOT</version>
         </dependency>
     </dependencies>
 
