--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.bensiebert</groupId>
         <artifactId>codelib</artifactId>
-        <version>1.0.34-SNAPSHOT</version>
+        <version>1.0.37-SNAPSHOOT</version>
     </parent>
 
     <groupId>com.bensiebert.codelib</groupId>
     <artifactId>common</artifactId>
-    <version>1.0.34-SNAPSHOT</version>
+    <version>1.0.37-SNAPSHOOT</version>
     <packaging>jar</packaging>
 
     <properties>
