--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bensiebert</groupId>
     <artifactId>codelib</artifactId>
-    <version>1.0.37-SNAPSHOOT</version>
+    <version>1.0.37-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
